--- a/netlify.toml
+++ b/netlify.toml
@@ -10,4 +10,4 @@ package = "@netlify/plugin-sitemap"
 [[plugins]]
 package = "netlify-plugin-submit-sitemap"
   [plugins.inputs]
-  providers = ["google", "bing", "yandex"]
+  providers = ["google", "yandex"]
